fix drawer z-index issue

--- a/packages/frosted-ui/src/components/drawer/drawer.css
+++ b/packages/frosted-ui/src/components/drawer/drawer.css
@@ -1,7 +1,6 @@
 /* .fui-DrawerBackdrop inherits all styles from .fui-DialogBackdrop */
 
 .fui-DrawerContent {
-  z-index: 1;
   position: fixed;
   top: 8px;
   right: 8px;
